# MyServer

./: CMakeLists.txt  README.md  build.sh
code/: main.cpp
code/http/: httprequest.cpp  httprequest.h
code/onnx/: infer.cpp  infer.h
resources/: 400.html  403.html  404.html  405.html  download.html  error.html  index.html  list.json  login.html  picture.html  register.html  response.txt  result.html  video.html  welcome.html
